# spaceify

./: 2  CHANGELOG  LICENSE  README.md  build-core.sh  build-docker-image.sh  build-package.sh  git-tagged-update.sh  git-update.sh  make-code.sh  test.sh  update.readme  version-updater.sh  versions
code/: application.js  applicationmanager.js  appmanager.js  appmanservice.js  binaryrpccommunicator.js  callbackbuffer.js  config.js  connectionhub.js  constants.js  contenttypes.js  core.js  crypt.js  database.js  dhcpdlog.js  dhcpservice.js  dnsserver.js  dnsservice.js  dockercontainer.js  dockerhelper.js  dockerimage.js  edgespaceifynet.js  engineiorpcserver.js  httpservice.js  httpstatus.js  installhelper.js  iptables.js  iptables_restore.js  language.js  logger.js  main.js  manager.js  messaging.js  package.json  pubsub.js  reload.js  rpccommunicator.js  sandboxedmanager.js  securitymodel.js  server.js  service.js  (+23 more)
core/: appmanager.js  config.js  connectionhub.js  constants.js  cop.sh  database.js  dhcpserver.js  dnsserver.js  dnsservice.js  dockercontainer.js  dockerhelper.js  dockerimage.js  engineiorpcserver.js  iptables.js  language.js  main.js  mainevents.js  package.json  proxy.js  sandboxedapplicationmanager.js  spaceifycore.js  spacelet.js  spaceletmanager.js  spm.js  utility.js  webserver.js  websocketrpcserver.js
data/: directories.txt
debian/: changelog  config  control  files  (+4 more)
ecap_spaceify_injector/ecap-spaceify-injector-1.1.0/src/: Makefile  Makefile.am  autoconf.h  ecap_spaceify_injector.la  injector.h  sample.h  spaceify_injector.cc  uriParser.h
(+997 files in other folders)
